- modifications in repos and added new actions in controllers. - added sweet alert

--- a/Cozy_Cuisine/Cozy_Cuisine.csproj
+++ b/Cozy_Cuisine/Cozy_Cuisine.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <Folder Include="Data\IServices\" />
     <Folder Include="Data\Services\" />
+    <Folder Include="Views\Patch\" />
   </ItemGroup>
 
 </Project>
