--- a/Cozy_Cuisine/Cozy_Cuisine.csproj
+++ b/Cozy_Cuisine/Cozy_Cuisine.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Patch\**" />
+    <Content Remove="Views\Patch\**" />
+    <EmbeddedResource Remove="Views\Patch\**" />
+    <None Remove="Views\Patch\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
@@ -19,8 +26,9 @@
 
   <ItemGroup>
     <Folder Include="Data\IServices\" />
+    <Folder Include="Data\IServices\" />
     <Folder Include="Data\Services\" />
-    <Folder Include="Views\Patch\" />
+    <Folder Include="Data\Services\" />
   </ItemGroup>
 
 </Project>
