-- almost completed API for all tables

--- a/Cozy_Cuisine/appsettings.json
+++ b/Cozy_Cuisine/appsettings.json
@@ -1,4 +1,14 @@
 {
+
+  "EmailSettings": {
+    "From": "unlibugs938@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "unlibugs938@gmail.com",
+    "Password": "nfwplqqohivqpuwu",
+    "UseSSL": "false"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
